<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFA7A7"
    android:backgroundTint="#000000"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/AplikazioTituloa"
        android:textColor="#857777"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#918888"
        android:text="@string/Hasi"
        android:textColor="#0B0B0B" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#918888"
        android:text="@string/Konfiguratu"
        android:textColor="#0B0B0B" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#918888"
        android:text="@string/HoniBuruz"
        android:textColor="#0B0B0B" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#918888"
        android:text="@string/Irten"
        android:textColor="#0B0B0B" />
</LinearLayout>